# phylloxera

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  PhylloxeraConfig.cmake.in  PhylloxeraConfig.hh.in  PhylloxeraPy.py  README.md  install_docker.sh  setup_phylloxera.sh  test.py  this_phylloxera.sh.in
doc/: ValidationLog.rst
src/: CMakeLists.txt  PhylloxeraPy.py
src/IO/: CmakeLists.txt  Dataset.cxx  Dataset.hh  DatasetCollector.cxx  DatasetCollector.hh  RootFileInterface.cxx  RootFileInterface.hh
src/IO/LinkDef/: IOLinkDef.hh
src/KryptonPdf/: AsymmetricKryptonLine.cxx  AsymmetricKryptonLine.hh  CMakeLists.txt  EnergyLossPdf.cxx  EnergyLossPdf.hh  KrTest.cxx  KrTest.hh  KryptonLine.cxx  KryptonLine.hh  MultiEnergyLossesPdf.cxx  MultiEnergyLossesPdf.hh
src/KryptonPdf/LinkDef/: KryptonPdfLinkDef.hh
src/KryptonRooFit/: CMakeLists.txt  RooKrTest.cxx  RooKrTest.hh  RooKryptonLine.cxx  RooKryptonLine.hh
src/PdfFactory/: Base.cxx  Base.hh  CMakeLists.txt  PdfFactory.cxx  PdfFactory.hh  Project8PdfFactory.cxx  Project8PdfFactory.hh
src/PdfFactory/LinkDef/: PdfFactoryLinkDef.hh
src/ToolBox/: CMakeLists.txt  Constant.cpp  Constant.hh  Conversion.cpp  Plots.cpp  RooFitTools.cpp  VectorTools.cpp
src/TritiumPdf/: CMakeLists.txt  DistortedTritiumSpectrum.cxx  DistortedTritiumSpectrum.hh  RealTritiumFrequencySpectrum.cxx  RealTritiumFrequencySpectrum.hh  RealTritiumSpectrum.cxx  RealTritiumSpectrum.hh  RooSmearedTritiumSpectrum.cxx  SimpleTritiumSpectrum.cxx  SimpleTritiumSpectrum.hh
src/TritiumPdf/LinkDef/: TritiumPdfLinkDef.hh
src/TritiumRooFit/: CMakeLists.txt  RooRealTritiumSpectrum.cxx  RooRealTritiumSpectrum.hh  RooSimpleTritiumSpectrum.cxx  RooSimpleTritiumSpectrum.hh  RooSmearedTritiumSpectrum.hh
src/TritiumSpectrum/: CMakeLists.txt  TritiumSpectrum.cpp  TritiumSpectrum.hh
src/exe/: CMakeLists.txt  EnergyLoss.cxx  KuriePlot.cxx  PhaseI_KryptonLineFitter.cxx
src/python/: PhylloxeraPy.py.in  __init__.py
